// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VisibilityObserver /> with minimal options matches its snapshot 1`] = `
<IntersectionObserver
  onChange={[Function]}
>
  <div />
</IntersectionObserver>
`;

exports[`<VisibilityObserver /> with render, callback and rootMargin options enters view matches its snapshot 1`] = `
<span>
  IN VIEW
</span>
`;

exports[`<VisibilityObserver /> with render, callback and rootMargin options enters view then leaves view matches its snapshot 1`] = `
<span>
  IN VIEW
</span>
`;

exports[`<VisibilityObserver /> with render, callback and rootMargin options leaves view matches its snapshot 1`] = `
<span>
  OUT OF VIEW
</span>
`;

exports[`<VisibilityObserver /> with render, callback and rootMargin options leaves view then re-enters view matches its snapshot 1`] = `
<span>
  IN VIEW
</span>
`;

exports[`<VisibilityObserver /> with render, callback and rootMargin options matches its snapshot 1`] = `
<IntersectionObserver
  onChange={[Function]}
  rootMargin="100px"
>
  <span>
    OUT OF VIEW
  </span>
</IntersectionObserver>
`;

exports[`<VisibilityObserver /> without callbacks enters view and scrolled out of view matches snapshot 1`] = `
<span>
  IN VIEW
</span>
`;

exports[`<VisibilityObserver /> without callbacks enters view matches snapshot 1`] = `
<span>
  IN VIEW
</span>
`;

exports[`<VisibilityObserver /> without callbacks matches snapshot 1`] = `
<span>
  OUT OF VIEW
</span>
`;
